appleid theme colors as in invitation

--- a/Components/TimelineBoda.razor
+++ b/Components/TimelineBoda.razor
@@ -1,7 +1,7 @@
 ﻿
 @inject MyMudTheme theme;
 
-<MudTimeline TimelineAlign="TimelineAlign.Start" TimelinePosition="TimelinePosition.Start" Style="@($"background-color:{theme.Palette.TertiaryLighten};")">
+<MudTimeline TimelineAlign="TimelineAlign.Start" TimelinePosition="TimelinePosition.Start" Style="@($"background-color:{theme.Palette.White};")">
     <MudContainer>
         <MudTimelineItem Elevation="4" Color="Color.Secondary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
@@ -11,7 +11,7 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">13:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">SI QUIERO. Ceremonia</MudText>
+                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Ceremonia</MudText>
                 <MudText>Parroquia Ntra. Sra. de la Asunción de Campanario - Pl. Carmen, s/n, 06460 Campanario, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
@@ -37,7 +37,7 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">15:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Cótel y fotos</MudText>
+                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Coctel y fotos</MudText>
                 <MudText>Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
