--- a/Pages/Alojamientos.razor
+++ b/Pages/Alojamientos.razor
@@ -7,7 +7,7 @@
 @using System.ComponentModel.DataAnnotations
 
 
-<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Alojamientos</MudText>
+<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Alojamientos</MudText>
 
 
 <MudPaper Elevation="8" Class="ma-6 pa-4">
