--- a/Pages/Autobuses.razor
+++ b/Pages/Autobuses.razor
@@ -6,7 +6,7 @@
 @using Boda_BlazorWASM_PowerAutomate.Models;
 @using System.ComponentModel.DataAnnotations
 
-<MudText Class="mt-10 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Autobuses</MudText>
+<MudText Class="mt-10 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Autobuses</MudText>
 
 @* <MudPaper Class="mt-10 mx-7 mb-7 pa-4" Elevation="4">
     <MudImage Src="images/mapa.jpg" Width="332" Height="250" Alt="mapa" Class="rounded-lg ma-4" />
