--- a/Pages/Contacto.razor
+++ b/Pages/Contacto.razor
@@ -6,10 +6,10 @@
 @using Boda_BlazorWASM_PowerAutomate.Models;
 @using System.ComponentModel.DataAnnotations
 
-<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Contacto</MudText>
+<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Contacto</MudText>
 
 <MudPaper Elevation="5" Class="ma-10" Width="flex-column align-center justify-center mud-width-full">
-    <MudList Clickable="true">
+    <MudList Clickable="true">s
         <MudListSubheader>
             Teléfonos de contacto
         </MudListSubheader>
