--- a/Pages/Horarios.razor
+++ b/Pages/Horarios.razor
@@ -6,7 +6,7 @@
 @using Boda_BlazorWASM_PowerAutomate.Models;
 @using System.ComponentModel.DataAnnotations
 
-<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Horarios</MudText>
+<MudText Class="mt-7 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Horarios</MudText>
 
 
 <MudGrid>
