--- a/Pages/Turismo.razor
+++ b/Pages/Turismo.razor
@@ -6,7 +6,7 @@
 @using Boda_BlazorWASM_PowerAutomate.Models;
 @using System.ComponentModel.DataAnnotations
 
-<MudText Class="mt-7 mb-7 butterfly" Align="Align.Center" Color="Color.Dark" Typo="Typo.h3">Turismo</MudText>
+<MudText Class="mt-7 mb-7 butterfly" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">Turismo</MudText>
 
 <MudGrid Spacing="4" Justify="Justify.Center">
     <MudItem >
