--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -19,15 +19,15 @@
 
     <div class="foto1">
         <MudContainer Class="text-overlay flex-column align-center justify-center mud-width-full">
+            <MudText Class="mt-14 mb-6 quicksandLight" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
+
+            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">M. Isabel</MudText>
+            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">y</MudText>
+            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">Nacho</MudText>
 
 
-            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h1">M. Isabel</MudText>
-            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h1">y</MudText>
-            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h1">Nacho</MudText>
-
-            <MudText Class="mt-14 dayroman" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
-            <MudText Class="mt-8 dayroman" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
-            <MudText Class="dayroman" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h5">Banquete: Medellín, Badajoz</MudText>
+            <MudText Class="mt-8 hello" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
+            <MudText Class="hello" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h5">Banquete: Medellín, Badajoz</MudText>
 
         </MudContainer>
 
@@ -36,29 +36,6 @@
 </div>
 
 <MudGrid>
-    <MudItem xs="12">
-        <MudContainer Class="flex-column align-center justify-center mud-width-full">
-            <MudText Class="mt-7 saturday" Align="Align.Center" Color="Color.Primary" Typo="Typo.h3">¡Nos casamos!</MudText>
-
-            <MudText Class="mt-7 pa-2 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">María</MudText>
-            <MudText Class="mt-7 pa-2 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">Isabel</MudText>
-            <MudText Class="pa-2 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">y</MudText>
-            <MudText Class="ma-10 pa-2 adelia" Color="Color.Secondary" Align="Align.Center" Typo="Typo.h2">Nacho</MudText>
-
-            <MudText Class="ma-4 butterfly" Color="Color.Primary" Align="Align.Center" Typo="Typo.h3">20 de abril de 2024</MudText>
-            <MudText Class="mt-8 saturday" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h4">Ceremonia: Campanario, Badajoz</MudText>
-            <MudText Class="saturday" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h4">Banquete: Medellín, Badajoz</MudText>
-        </MudContainer>
-
-   @*      <div class="d-flex align-center justify-center mt-8">
-            <MudDatePicker PickerVariant="PickerVariant.Static" @ref="_picker" @bind-Date="date" Class="d-flex align-content-center" />
-        </div>
-
-        <div class="d-flex align-center justify-center mt-n4 gap-8">
-            <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="Today">Fecha Hoy</MudButton>
-            <MudButton Color="Color.Primary" Variant="Variant.Filled" OnClick="WeddingDate">Fecha Boda</MudButton>
-        </div> *@
-    </MudItem>
 
     <MudItem Class="mt-5" xs="12">
         <TimelineBoda></TimelineBoda>
