fonts working now - paths adjusted

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,6 +1,5 @@
 ﻿@page "/"
-<link rel="stylesheet" href="/css/custom-fonts.css" />
-
+<link rel="stylesheet" href="./css/custom-fonts.css" />
 
 @using Boda_BlazorWASM_PowerAutomate.Components;
 @using Boda_BlazorWASM_PowerAutomate.Models;
@@ -19,21 +18,25 @@
 
     <div class="foto1">
         <MudContainer Class="text-overlay flex-column align-center justify-center mud-width-full">
-            <MudText Class="mt-14 mb-6 quicksandLight" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
+            <MudText Class="mt-14 mb-6 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
 
             <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">M. Isabel</MudText>
             <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">y</MudText>
             <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">Nacho</MudText>
 
 
-            <MudText Class="mt-8 hello" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
-            <MudText Class="hello" Align="Align.Center" Color="Color.Tertiary" Typo="Typo.h5">Banquete: Medellín, Badajoz</MudText>
+            <MudText Class="mt-8 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
+            <MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Banquete: Medellín, Badajoz</MudText>
 
         </MudContainer>
 
     </div>
 
 </div>
+
+<MudText Class="mt-14 mb-6 quicksandLight" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
+<MudText Class="mt-8 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
+<MudText Class="quicksandBold" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Banquete: Medellín, Badajoz</MudText>
 
 <MudGrid>
 
