--- a/Components/TimelineBoda.razor
+++ b/Components/TimelineBoda.razor
@@ -3,7 +3,7 @@
 
 <MudTimeline TimelineAlign="TimelineAlign.Start" TimelinePosition="TimelinePosition.Start" Style="@($"background-color:{theme.Palette.White};")">
     <MudContainer>
-        <MudTimelineItem Elevation="4" Color="Color.Secondary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Secondary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.Church" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -11,12 +11,12 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">13:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Ceremonia</MudText>
-                <MudText>Parroquia Ntra. Sra. de la Asunción de Campanario - Pl. Carmen, s/n, 06460 Campanario, Badajoz</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Secondary" Typo="Typo.h2" GutterBottom="true">Ceremonia</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Parroquia Ntra. Sra. de la Asunción de Campanario - Pl. Carmen, s/n, 06460 Campanario, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
 
-        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -24,12 +24,12 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Primary" Typo="Typo.h5">14:15</MudText>
-                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Salida bus a restaurante</MudText>
-                <MudText>Los autobuses saldrán hacia el lugar del banquete. Se podrán coger en Pl. Carmen, s/n, 06460 Campanario, Badajoz</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Salida bus a restaurante</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Los autobuses saldrán hacia el lugar del banquete. Se podrán coger en Pl. Carmen, s/n, 06460 Campanario, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
 
-        <MudTimelineItem Elevation="4" Color="Color.Secondary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Secondary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.Restaurant" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -37,12 +37,12 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">15:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Coctel y fotos</MudText>
-                <MudText>Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Coctel y fotos</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
 
-        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.Restaurant" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -50,12 +50,12 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">16:30</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Comida</MudText>
-                <MudText>Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Comida</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
 
-        <MudTimelineItem Elevation="4" Color="Color.Secondary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Secondary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.Nightlife" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -63,12 +63,12 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Secondary" Typo="Typo.h5">20:00</MudText>
-                <MudText Class="hellovalentica" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Barra libre</MudText>
-                <MudText>Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Secondary" Typo="Typo.h3" GutterBottom="true">Barra libre</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Urbanización Quinto Cecilio Parcela 105, 06411 Medellín, Badajoz</MudText>
             </ItemContent>
         </MudTimelineItem>
 
-        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -76,12 +76,12 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Primary" Typo="Typo.h5">21:30</MudText>
-                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Primer bus</MudText>
-                <MudText>Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Primer bus</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
             </ItemContent>
         </MudTimelineItem>
 
-        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -89,12 +89,12 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Primary" Typo="Typo.h5">00:30</MudText>
-                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Segundo bus</MudText>
-                <MudText>Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Segundo bus</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
             </ItemContent>
         </MudTimelineItem>
 
-        <MudTimelineItem Elevation="4" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
+        <MudTimelineItem Elevation="4"  Class="mt-3" Color="Color.Primary" Size="Size.Large" Variant="Variant.Filled">
             <ItemDot>
                 <MudIcon Icon="@Icons.Material.Filled.DirectionsBus" Size="Size.Large"></MudIcon>
             </ItemDot>
@@ -102,8 +102,8 @@
             </ItemOpposite>
             <ItemContent>
                 <MudText Color="Color.Primary" Typo="Typo.h5">21:30</MudText>
-                <MudText Class="hellovalentica" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Ultimo bus</MudText>
-                <MudText>Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
+                <MudText Class="mt-3 hello" Color="Color.Primary" Typo="Typo.h3" GutterBottom="true">Ultimo bus</MudText>
+                <MudText Class="mt-n3 quicksandBook" Color="Color.Secondary" Typo="Typo.h5">Los autobuses saldrán hacia Medellín y Campanario. Se podrán coger en la entrada del Restaurante Quinto Cecilio</MudText>
             </ItemContent>
         </MudTimelineItem>
     </MudContainer>
