--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -22,27 +22,30 @@
 
 <div class="flex-container">
 
-    <div class="foto1">
-        <MudContainer Class="text-overlay flex-column align-center justify-center mud-width-full">
-            <MudText Class="mt-14 mb-6 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
+    <div class="marco1">
+        <MudContainer Class="mt-15 text-overlay flex-column align-center justify-center mud-width-full">
+            <MudText Class="mb-6 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
 
-            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">M. Isabel</MudText>
-            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">y</MudText>
-            <MudText Class="pa-2 bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">Nacho</MudText>
+            <MudText Class="bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">M. Isabel</MudText>
+            <MudText Class="bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">y</MudText>
+            <MudText Class="bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">Nacho</MudText>
 
-            <MudText Class="mt-8 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
-            <MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Celebración: Medellín, Badajoz</MudText>
+            @*             <MudText Class="mt-8 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
+            <MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Celebración: Medellín, Badajoz</MudText> *@
 
         </MudContainer>
-
     </div>
-
 </div>
 
-<div class="container">
-    <img src="/images/hojas.svg" alt="Vector Image" class="hojas">
-    <img src="/images/rama1.svg" alt="Vector Image" class="rama1">
-</div>
+<MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
+    <img src="/images/hojas.svg" alt="Vector Image" class="hojas2">
+    <img src="/images/rama2.svg" alt="Vector Image" class="rama2">
+</MudContainer>
+
+
+
+<MudText Class="mt-8 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
+<MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Celebración: Medellín, Badajoz</MudText>
 
 <div class="container">
     <div class="vertical-line"></div>
@@ -50,9 +53,7 @@
 
 <MudGrid>
 
-    <MudItem Class="mt-5" xs="12">
-        <TimelineBoda></TimelineBoda>
-    </MudItem>
+
 
     <MudItem xs="12">
         <MudContainer Class="flex-column align-center justify-center mud-width-full">
@@ -99,12 +100,27 @@
 
 
 <style>
+    /* Custom CSS to override MudBlazor MudContainer padding */
+    .mud-container {
+        padding: 0 !important;
+    }
+
+    body {
+        overflow-x: hidden;
+    }
+
+    .mud-grid-spacing-xs-3 {
+        width: 100vw !important;
+        margin: 0px !important;
+    }
+
     .flex-container div {
         width: 100vw;
         height: 100vh;
+        margin-top: 30px;
     }
 
-    .foto1 {
+    .marco1 {
         /* background-color: var(--color1); */
         /* background-image: url('images/fotoMaizal2.jpg');  */
         background-size: cover;
@@ -115,9 +131,10 @@
         align-items: center;
         position: relative;
         /* background-color: #BFD09A; */
+        margin-top: 10px;
     }
 
-        .foto1::before {
+        .marco1::before {
             content: "";
             background-color: rgba(191, 208, 154, 0.1); /* Adjust the opacity as needed */
             position: absolute;
@@ -127,7 +144,6 @@
             left: 0;
             margin: 40px;
             border: 2px solid #BFD09A;
-
         }
 
     .text-overlay {
@@ -157,7 +173,6 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        
     }
 
     .vertical-line {
@@ -173,14 +188,29 @@
 
     .hojas {
         position: absolute;
-        top: 5%; /* Adjust this value to control the distance from the top */
+        top: 0; /* Adjust this value to control the distance from the top */
         left: 0; /* Adjust this value to control the distance from the left */
         /* You can also use right: 0; for sticking to the right side */
-        width: 100px; /* Adjust the width as needed */
+        width: 80px; /* Adjust the width as needed */
         height: auto; /* Maintain the aspect ratio */
         /* You can also use max-width or max-height to set limits *
-        /* Add other styles for your image if needed */
-        margin-top: -5px;
+            /* Add other styles for your image if needed */
+        margin-top: -30px;
+        z-index: 2;
+    }
+
+    .hojas2 {
+        position: absolute;
+        top: 0; /* Adjust this value to control the distance from the top */
+        right: 0; /* Adjust this value to control the distance from the left */
+        /* You can also use right: 0; for sticking to the right side */
+        width: 80px; /* Adjust the width as needed */
+        height: auto; /* Maintain the aspect ratio */
+        /* You can also use max-width or max-height to set limits *
+                /* Add other styles for your image if needed */
+        margin-top: -30px;
+        z-index: 2;
+        transform: scaleX(-1);
     }
 
     .rama1 {
@@ -188,11 +218,25 @@
         top: 0; /* Adjust this value to control the distance from the top */
         right: 0; /* Adjust this value to control the distance from the left */
         /* You can also use right: 0; for sticking to the right side */
-        width: 300px; /* Adjust the width as needed */
+        width: 270px; /* Adjust the width as needed */
         height: auto; /* Maintain the aspect ratio */
         /* You can also use max-width or max-height to set limits *
-            /* Add other styles for your image if needed */
+                /* Add other styles for your image if needed */
         margin-top: -50px;
+        z-index: 2;
+    }
+
+    .rama2 {
+        position: absolute;
+        top: 0; /* Adjust this value to control the distance from the top */
+        left: 0; /* Adjust this value to control the distance from the left */
+        /* You can also use right: 0; for sticking to the right side */
+        width: 270px; /* Adjust the width as needed */
+        height: auto; /* Maintain the aspect ratio */
+        /* You can also use max-width or max-height to set limits *
+                    /* Add other styles for your image if needed */
+        margin-top: -50px;
+        z-index: 2;
     }
 
 </style>
@@ -210,56 +254,14 @@
     DateTime? date;
     DateTime weddingDate = new System.DateTime(2024, 04, 20);
 
-    protected override void OnInitialized()
-    {
-
-    }
-
-
     private void ConfirmAttendance()
     {
         IsAttendanceConfirmed = true;
     }
 
 
-    // protected override void OnAfterRender(bool firstRender)
-    // {
-    //     if (firstRender)
-    //     {
-    //         _picker.GoToDate(weddingDate);
-    //         date = weddingDate;
-    //     }
-    // }
 
-    // private async Task Today()
-    // {
-    //     await _picker.GoToDate(DateTime.Today);
-    //     date = DateTime.Today;
-    // }
-
-    // private async Task WeddingDate()
-    // {
-    //     await _picker.GoToDate(weddingDate);
-    //     date = weddingDate;
-    // }
-
-    private string valueMenu { get; set; } = "Nada seleccionado";
-    private IEnumerable<string> opcionesMenu { get; set; } = new HashSet<string>();
-
-    private string[] intolerancias =
-      {
-        "Nada", "Lactosa", "Gluten", "Marisco", "Menú vegetariano", "Menú vegano", "Otros"
-    };
-
-    private string valueBus { get; set; } = "Nada seleccionado";
-    private IEnumerable<string> opcionesBus { get; set; } = new HashSet<string>();
-    private string[] buses =
-      {
-        "Ninguno",
-        "14:30 Campanario (Ceremonia) - Quinto Cecilio (Banquete)", 
-        "01:00 Quinto Cecilio (Banquete) - Medellín",
-        "01:00 Quinto Cecilio (Banquete) - Campanario",
-    };
+  
 
 
 }
