--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -21,19 +21,28 @@
 
 
 <div class="flex-container">
-
+@* 
     <div class="marco1">
         <MudContainer Class="mt-0 text-overlay flex-column align-center justify-center mud-width-full">
-            <MudText Class="mb-6 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">¡Nos casamos!</MudText>
+            <MudText Class="mb-6 quicksandBook nosCasamos" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">¡Nos casamos!</MudText>
 
             <MudText Class="bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">M. Isabel</MudText>
             <MudText Class="bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">y</MudText>
             <MudText Class="bacalisties" Color="Color.Primary" Align="Align.Center" Typo="Typo.h2">Nacho</MudText>
 
-            @*             <MudText Class="mt-8 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Ceremonia: Campanario, Badajoz</MudText>
-            <MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Celebración: Medellín, Badajoz</MudText> *@
+            <MudText Class="mt-4 quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">20 abril 2024</MudText>
 
         </MudContainer>
+    </div> *@
+
+    <div class="marco1">
+        <div class="text-overlay">
+            <h2 class="quicksandBook nosCasamos">¡Nos casamos!</h2>
+            <h1 class="bacalisties">M. Isabel</h1>
+            <h1 class="bacalisties">y</h1>
+            <h1 class="bacalisties">Nacho</h1>
+            <h5 class="quicksandBook fecha">20 abril 2024</h5>
+        </div>
     </div>
 </div>
 
@@ -43,26 +52,52 @@
 </MudContainer>
 
 
-
-
-
-<div class="container">
+@* <div class="container">
     <div class="vertical-line"></div>
-</div>
+</div> *@
 
 <MudGrid>
+    <MudItem xs="12">
+        <MudContainer Class="mt-16 flex-column align-center justify-center mud-width-full">
+            <div class="container">
+                <div class="vertical-line"></div>
+            </div>
+        </MudContainer>
+    </MudItem>
 
     <MudItem xs="12">
         <MudContainer Class="flex-column align-center justify-center mud-width-full">
+            <div class="d-flex align-center justify-center">
+                <MudIcon Icon="@Icons.Material.Filled.Church" Size="Size.Large" Color="Color.Secondary"></MudIcon>
+            </div>
             <MudText Class="quicksandBold" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Ceremonia</MudText>
             <MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Campanario, Badajoz</MudText>
+            <MudText Class="quicksandLight" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">13:00</MudText>
 
-            <MudText Class="mt-10 quicksandBold" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Celebración</MudText>
-            <MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Medellín, Badajoz</MudText>
         </MudContainer>
-
-
     </MudItem>
+
+    <MudItem xs="12">
+        <MudContainer Class="flex-column align-center justify-center mud-width-full">
+            <div class="container">
+                <div class="vertical-line"></div>
+            </div>
+        </MudContainer>
+    </MudItem>
+
+    <MudItem xs="12">
+        <MudContainer Class="flex-column align-center justify-center mud-width-full">
+            <div class="d-flex align-center justify-center">
+                <MudIcon Icon="@Icons.Material.Filled.Restaurant" Size="Size.Large" Color="Color.Secondary"></MudIcon>
+            </div>
+
+            <MudText Class="quicksandBold" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Celebración</MudText>
+            <MudText Class="quicksandBook" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h5">Medellín, Badajoz</MudText>
+            <MudText Class="quicksandLight" Align="Align.Center" Color="Color.Secondary" Typo="Typo.h4">15:00</MudText>
+
+        </MudContainer>
+    </MudItem>
+
 
     <MudItem xs="12">
         <MudContainer Class="flex-column align-center justify-center mud-width-full">
@@ -109,6 +144,11 @@
 
 
 <style>
+    :root {
+        --primary-color: #BFD09A; /* Define your primary color */
+        --secondary-color: #B3CEC3; /* Define your secondary color */
+        --tertiary-color: #808285;
+    }
     /* Custom CSS to override MudBlazor MudContainer padding */
     .mud-container {
         padding: 0 !important;
@@ -125,8 +165,7 @@
 
     .flex-container div {
         width: 100vw;
-        height: 100vh;
-        margin-top: 30px;
+        height: 80vh;
     }
 
     .marco1 {
@@ -150,13 +189,13 @@
             right: 0;
             bottom: 0;
             left: 0;
-            margin: 40px;
+            margin: 3rem;
             border: 2px solid #BFD09A;
         }
 
     .text-overlay {
         position: absolute;
-        top: 50%;
+        top: 40%;
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
@@ -164,6 +203,8 @@
         display: flex;
         flex-direction: column;
         gap: 25px;
+        align-items: center;
+        margin-top: 8.5rem;
     }
 
 
@@ -184,9 +225,10 @@
     }
 
     .vertical-line {
+        margin-top: 0px;
         border-left: 2px solid; /* Adjust thickness and color as needed */
         color: #BFD09A;
-        height: 200px; /* Adjust height as needed */
+        height: 100px; /* Adjust height as needed */
     }
 
     .container {
@@ -205,6 +247,7 @@
             /* Add other styles for your image if needed */
         margin-top: -30px;
         z-index: 2;
+        opacity: 0.7;
     }
 
     .hojas2 {
@@ -219,6 +262,7 @@
         margin-top: -70px;
         z-index: 2;
         transform: scaleX(-1);
+        opacity: 0.7;
     }
 
     .rama1 {
@@ -232,12 +276,13 @@
                 /* Add other styles for your image if needed */
         margin-top: -50px;
         z-index: 2;
+        opacity: 0.7;
     }
 
     .rama2 {
         position: absolute;
         top: 0; /* Adjust this value to control the distance from the top */
-        left: 0; /* Adjust this value to control the distance from the left */
+        left: -4%; /* Adjust this value to control the distance from the left */
         /* You can also use right: 0; for sticking to the right side */
         width: 270px; /* Adjust the width as needed */
         height: auto; /* Maintain the aspect ratio */
@@ -245,7 +290,34 @@
                     /* Add other styles for your image if needed */
         margin-top: -70px;
         z-index: 2;
+        opacity: 0.7;
     }
+
+
+
+    .bacalisties {
+        font-size: 3rem;
+        font-weight: 200;
+        color: var(--primary-color); 
+        margin-bottom: 0.5rem;
+    }
+
+    .quicksandBook {
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: var(--secondary-color); /* Secondary color */
+    }
+
+    .nosCasamos {
+        margin-bottom: 0.3rem;
+    }
+
+    .fecha {
+        font-weight: 400;
+        color: var(--secondary-color);
+        font-size: 1.2rem;
+    }
+
 
 </style>
 
