added branch and leave vectors

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -66,6 +66,11 @@
     </MudItem>
 </MudGrid>
 
+<div class="container">
+    <img src="/images/hojas.svg" alt="Vector Image" class="hojas">
+    <img src="/images/rama3.svg" alt="Vector Image" class="rama3">
+</div>
+
 <MudGrid>
     <MudItem xs="12">
         <MudContainer Class="mt-16 flex-column align-center justify-center mud-width-full">
@@ -323,6 +328,19 @@
         opacity: 0.7;
     }
 
+    .rama3 {
+        position: absolute;
+        top: 0; /* Adjust this value to control the distance from the top */
+        right: -8%; /* Adjust this value to control the distance from the left */
+        /* You can also use right: 0; for sticking to the right side */
+        width: 350px; /* Adjust the width as needed */
+        height: auto; /* Maintain the aspect ratio */
+        /* You can also use max-width or max-height to set limits *
+                    /* Add other styles for your image if needed */
+        margin-top: -60px;
+        z-index: 2;
+        opacity: 0.7;
+    }
 
 
     .bacalisties {
