--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -107,6 +107,15 @@
     </MudItem>
 
     <MudItem xs="12">
+        <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
+            <img src="/images/hojas.svg" alt="Vector Image" class="hojas2">
+            <img src="/images/rama4.svg" alt="Vector Image" class="rama4">
+        </MudContainer>
+    </MudItem>
+
+
+
+    <MudItem xs="12">
         <MudContainer Class="flex-column align-center justify-center mud-width-full">
             <div class="d-flex align-center justify-center">
                 <MudIcon Icon="@Icons.Material.Filled.Restaurant" Size="Size.Large" Color="Color.Secondary"></MudIcon>
@@ -122,6 +131,13 @@
                            StartIcon="@Icons.Material.Filled.LocationOn" Variant="Variant.Filled" Size="Size.Large" Color="Color.Secondary">VER UBICACION</MudButton>
             </div>
 
+        </MudContainer>
+    </MudItem>
+
+    <MudItem xs="12">
+        <MudContainer Class="mt-4 container text-overlay flex-column align-center justify-center mud-width-full">
+            <img src="/images/hojas.svg" alt="Vector Image" class="hojas">
+            <img src="/images/rama4.svg" alt="Vector Image" class="rama5">
         </MudContainer>
     </MudItem>
 
@@ -274,9 +290,9 @@
     .hojas {
         position: absolute;
         top: 0; /* Adjust this value to control the distance from the top */
-        left: 0; /* Adjust this value to control the distance from the left */
+        left: -2%; /* Adjust this value to control the distance from the left */
         /* You can also use right: 0; for sticking to the right side */
-        width: 80px; /* Adjust the width as needed */
+        width: 60px; /* Adjust the width as needed */
         height: auto; /* Maintain the aspect ratio */
         /* You can also use max-width or max-height to set limits *
             /* Add other styles for your image if needed */
@@ -342,6 +358,32 @@
         opacity: 0.7;
     }
 
+    .rama4 {
+        position: absolute;
+        top: 0; /* Adjust this value to control the distance from the top */
+        left: -1%;
+        height: 350px; 
+        width: auto; /* Maintain the aspect ratio */
+        /* You can also use max-width or max-height to set limits *
+                        /* Add other styles for your image if needed */
+        margin-top: -170px;
+        z-index: 2;
+        opacity: 0.7;
+    }
+
+    .rama5 {
+        position: absolute;
+        top: 0; /* Adjust this value to control the distance from the top */
+        right: -3%;
+        height: 350px;
+        width: auto; /* Maintain the aspect ratio */
+        /* You can also use max-width or max-height to set limits *
+                            /* Add other styles for your image if needed */
+        margin-top: 0px;
+        z-index: 2;
+        transform: scaleX(-1);
+        opacity: 0.7;
+    }
 
     .bacalisties {
         font-size: 3rem;
